--- a/oogway/Panel/templates/Components/sidebar.html
+++ b/oogway/Panel/templates/Components/sidebar.html
@@ -2,9 +2,9 @@
   <!-- Main Sidebar Container -->
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="index3.html" class="brand-link">
-      <img src="{% static 'dist/img/AdminLTELogo.png' %}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-      <span class="brand-text font-weight-light">Master Oogway</span>
+    <a class="brand-link">
+      <img src="{% static 'dist/img/TradeMaster.png' %}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
+      <span class="brand-text font-weight-light">Trade Master</span>
     </a>
 
     <!-- Sidebar -->
@@ -18,6 +18,24 @@
               <i class="nav-icon fas fa-tachometer-alt"></i>
               <p>
                 Dashboard
+              </p>
+            </a>
+          </li>
+
+          <li class="nav-item">
+            <a href="{% url 'channel_list' %}" class="nav-link">
+              <i class="nav-icon fas fa-th"></i>
+              <p>
+                Channels
+              </p>
+            </a>
+          </li>
+
+          <li class="nav-item">
+            <a href="{% url 'post_list' %}" class="nav-link">
+              <i class="nav-icon fas fa-comment"></i>
+              <p>
+                Posts
               </p>
             </a>
           </li>
