--- a/oogway/Panel/templates/Components/sidebar.html
+++ b/oogway/Panel/templates/Components/sidebar.html
@@ -23,7 +23,7 @@
           </li>
 
           <li class="nav-item">
-            <a href="{% url 'channel_list' %}" class="nav-link">
+            <a href="{% url 'Panel:channel_list' %}" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
                 Channels
@@ -32,7 +32,7 @@
           </li>
 
           <li class="nav-item">
-            <a href="{% url 'post_list' %}" class="nav-link">
+            <a href="{% url 'Panel:post_list' %}" class="nav-link">
               <i class="nav-icon fas fa-comment"></i>
               <p>
                 Posts
