--- a/oogway/Panel/templates/Channel/channelList.html
+++ b/oogway/Panel/templates/Channel/channelList.html
@@ -107,7 +107,7 @@
 <script src="{% static 'dist/js/adminlte.min.js' %}"></script>
 <script>
     function logout() {
-        fetch('{% url 'logout' %}', {
+        fetch('{% url 'Panel:logout' %}', {
             method: 'POST',
             headers: {
                 'X-CSRFToken': '{{ csrf_token }}'
@@ -115,7 +115,7 @@
         })
         .then(response => {
             if (response.ok) {
-                window.location.href = '{% url 'home' %}';
+                window.location.href = '{% url 'Panel:home' %}';
             }
         });
     }
