--- a/oogway/Panel/templates/Home/home.html
+++ b/oogway/Panel/templates/Home/home.html
@@ -199,7 +199,7 @@
 <script src="{% static 'dist/js/pages/dashboard.js' %}"></script>
 <script>
   function logout() {
-      fetch('{% url 'logout' %}', {
+      fetch('{% url 'Panel:logout' %}', {
           method: 'POST',
           headers: {
               'X-CSRFToken': '{{ csrf_token }}'
@@ -207,7 +207,7 @@
       })
       .then(response => {
           if (response.ok) {
-              window.location.href = '{% url 'home' %}';
+              window.location.href = '{% url 'Panel:home' %}';
           }
       });
   }
